# remarkable

desktop/: Cargo.toml
tablet/: Cargo.toml  build.sh
tablet/.cargo/: config
tablet/crates/gesture/: Cargo.toml
tablet/crates/gesture/src/: lib.rs
tablet/crates/parchment/: Cargo.toml
tablet/crates/parchment/src/: main.rs
tablet/crates/proc/src/: lib.rs
tablet/crates/raft/src/: lib.rs
tablet/crates/shared/: Cargo.toml
tablet/crates/shared/src/: lib.rs
tablet/crates/tray/: Cargo.toml
tablet/crates/tray/src/: channel.rs  display.rs  draft_program.rs  framebuffer.rs  input.rs  main.rs  panel.rs  rect.rs  render.rs  ui.rs
tablet/crates/wave/: Cargo.toml
tablet/crates/wave/src/: main.rs
